[package]
edition = "2024"
name = "chip8"
version = "0.1.0"
description = "A simple chip 8 emulator in rust"

[dependencies]
bit-iter = "1.3.1"
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.1"
sdl3 = { version = "0.15.1", features = ["ttf"] }

[profile.release]
strip = "debuginfo"
lto = "thin"
opt-level = 3
